--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "get-video-duration": "^4.0.0",
     "mongoose": "^6.3.0",
     "multer": "^1.4.4",
     "nodemailer": "^6.7.3",
